--- a/package.json
+++ b/package.json
@@ -2,17 +2,20 @@
   "name": "gene_vue_quasar",
   "version": "0.0.0",
   "private": true,
-  "type": "module",
   "scripts": {
-    "dev": "vite",
     "build": "vite build",
+    "dev": "vite",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@quasar/extras": "^1.0.0",
+    "quasar": "^2.0.0",
     "vue": "^3.4.21"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
-    "vite": "^5.1.6"
-  }
+    "vite": "^5.1.6",
+    "vue-cli-plugin-quasar": "~5.0.2"
+  },
+  "type": "module"
 }
